# worldcup

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/: actual_results.json  bracket_map.json  groups.json  match_tracker.json  my_bracket.json  results.json
data/raw/: elo_ratings.csv
results/: match_predictions.json  projected_bracket.md  run_manifest.json  simulation_summary.json  wc2026_probabilities_1000.csv
src/eval/: backtest.py  calibration.py  convergence.py  matchup_odds.py  sensitivity.py
src/ingest/: elo.py  fifa.py  historical.py  names.py  odds.py  polymarket.py  validate.py
src/model/: fit.py  match_predict.py  montecarlo.py  poisson.py  scoreline.py  strength.py
src/sim/: best_third.py  bracket.py  standings.py  tiebreakers.py
src/tournament/: __init__.py  best_third.py  bracket.py  standings.py  tiebreakers.py
tests/: test_best_third.py  test_bracket.py  test_determinism.py  test_group_sim.py  test_invariants.py  test_match_predict.py  test_model.py  test_names.py  test_odds.py  test_polymarket.py  test_tiebreakers.py
